--- a/src/pages/home/styles/filter.css
+++ b/src/pages/home/styles/filter.css
@@ -2,8 +2,56 @@
     display: flex;
     flex-direction: column ;
     align-items: center;
+    margin-top: 10px;
 }
 
-input {
+.tagsFilter {
+    display: flex;
+    flex-direction: row ;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 70%;
+}
+
+.filterTag:checked + .filter-label {
+    background-color: var(--card);
+    color: aliceblue;
+}
+
+.filter-label {
+    text-align: center;
+
+    background-color: aliceblue;
+
+    padding: 4px 8px;
+    border-radius: 16px;
+    width: 180px;
+
+    margin: 5px;
+}
+
+input.filterTag {
     outline: none;
+    display: none;
+}
+
+input#gameSearch {
+    background-color: aliceblue;
+    outline: none;
+    border: none;
+    width: 180px;
+    padding: 4px 8px;
+    border-radius: 16px;
+
+}
+
+#inputFilter {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    width: 100%;
+    max-width: 70%;
 }
