feat: height restored

--- a/src/pages/home/styles/card.css
+++ b/src/pages/home/styles/card.css
@@ -16,7 +16,7 @@ li.game-card {
     padding: 25px;
     
     width: 95%;
-    max-width: 800px;
+    max-width: 42%;
 
     margin: 20px 0px;
     border-radius: 24px;
