--- a/src/pages/home/styles/filter.css
+++ b/src/pages/home/styles/filter.css
@@ -9,10 +9,10 @@
     display: flex;
     flex-direction: row ;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
     width: 100%;
-    max-width: 70%;
+    max-width: 42%;     
 }
 
 .filterTag:checked + .filter-label {
@@ -50,8 +50,8 @@ input#gameSearch {
 #inputFilter {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 
     width: 100%;
-    max-width: 70%;
+    max-width: 42%;
 }
