--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,9 +1,27 @@
-p {
+/* p {
     display: flex;
-    justify-content: center
-    ;
-    background-color: var(--background-header);
+    justify-content: center;
     color: aliceblue;
     font-weight: 300;
     padding: 20px;
+} */
+
+footer {
+    background-color: var(--background-header);
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+}
+
+footer p {
+
+    display: flex;
+    justify-content: center;
+    color: aliceblue;
+    font-weight: 300;
+    padding: 20px;
+    
 }
