--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,6 +4,8 @@ header {
     justify-content: space-between;
     padding: 10px 30px;
     background-color: var(--background-header);
+
+    height: 10vh;
     
 }
 
